WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262988
[JSC] TypeError message for missing "throw" method during yield* delegation is misleading
https://bugs.webkit.org/show_bug.cgi?id=262988
Summary
[JSC] TypeError message for missing "throw" method during yield* delegation i...
Alexey Shvayka
Reported
2023-10-10 17:09:09 PDT
Generators always have a "throw" method.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-10 17:09:23 PDT
<
rdar://problem/116777453
>
Alexey Shvayka
Comment 2
2023-10-10 17:20:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18922
EWS
Comment 3
2023-10-10 22:07:09 PDT
Committed
269189@main
(0e85ec0665a3): <
https://commits.webkit.org/269189@main
> Reviewed commits have been landed. Closing PR #18922 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug