[JSC] TypeError message for missing "throw" method during yield* delegation is misleading https://bugs.webkit.org/show_bug.cgi?id=262988 <rdar://problem/116777453>

Reviewed by Yusuke Suzuki.

This change rewords the TypeError message to avoid mentioning "generator" since all generators have
the "throw" method (unless in a super unlikely case of it being removed) and fixes grammar by using
a proper noun for "delegated".

Aligns JSC with V8 and SpiderMonkey to mention "iterator".

* JSTests/stress/async-iteration-yield-star-interface.js:
* JSTests/stress/generator-yield-star.js:
* Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::emitDelegateYield):

Canonical link: https://commits.webkit.org/269189@main